crates/norn-macros/tests/ui/unknown_tool_args_key.rs
#![allow(dead_code)]

use norn_macros::ToolArgs;

#[derive(ToolArgs)]
struct UnknownKey {
    /// A documented field.
    #[tool_args(rename = "nope")]
    field: String,
}

fn main() {}
